--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,23 @@ spring.thymeleaf.content-type=text/html
 # 开发时关闭缓存,不然没法看到实时页面
 spring.thymeleaf.cache=false
 # thymeleaf end
+logging.level.root=debug
+# 抵押类微服务数据库配置
+#连接数据库的url
+spring.datasource.druid.url=jdbc:mysql://60.205.6.149:3306/sagittarius?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
+#这一项可配可不配，如果不配置druid会根据url自动识别dbType，然后选择相应的driverClassName
+spring.datasource.druid.driverClassName=com.mysql.jdbc.Driver
+#连接数据库的用户名
+spring.datasource.druid.username=pharos
+#spring.datasource.druid.username=root
+#连接数据库的密码
+spring.datasource.druid.password=Donglei2015
+#spring.datasource.druid.password=zmc
+#初始化时建立物理连接的个数
+spring.datasource.druid.initialSize=20
+#最大连接池数量
+spring.datasource.druid.maxActive=20
+#获取连接时最大等待时间，单位毫秒
+spring.datasource.druid.maxWait=60000
+# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+spring.datasource.druid.timeBetweenEvictionRunsMillis=60000
